# spider-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MCP_SETUP.md  README.md  build-all.sh  frida-root-bypass.js  npm-publish.bat  npm-publish.sh  publish.bat  publish.sh
.github/workflows/: build.yml  publish.yml
npm/: .npmignore  README.md  install.js  package-lock.json  package.json  platforms.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/reptool/: README.md  package.json
npm/win32-x64/: package.json
skills/: README.md
skills/agent-orchestration/: SKILL.md
skills/crypto-toolkit/: SKILL.md
skills/js-analysis/: SKILL.md
skills/reverse-engineering/: SKILL.md
skills/traffic-analysis/: SKILL.md
src/: ai_config.rs  frida.rs  main.rs
src/ai/: mod.rs
src/app_reverse/: mod.rs
src/calc/: mod.rs
src/cli/: ai_cmd.rs  ai_config_cmd.rs  calc_cmd.rs  config_cmd.rs  crawl_cmd.rs  crypto_cmd.rs  export_cmd.rs  har_cmd.rs  hook_cmd.rs  js_cmd.rs  mini_cmd.rs  mod.rs  proto_cmd.rs  proxy_cmd.rs  render_cmd.rs  req_cmd.rs  tools_cmd.rs
src/config/: mod.rs
src/core/: mod.rs
src/crawl/: mod.rs
src/crypto/: mod.rs
src/export/: mod.rs
src/har/: mod.rs
src/js/: mod.rs
src/mcp/: mod.rs
src/proxy/: mod.rs
src/render/: mod.rs
src/tools/: mod.rs
